<resources>
    <string name="app_name">有理赔</string>
    <string name="title_activity_login">登录</string>

    <!--计算器页面-->
    <string name="region">区域</string>
    <string name="hurtlevel">伤残等级</string>
    <string name="set_hurtlevel">选择伤残等级</string>
    <string name="salary">月薪</string>
    <string name="set_salary">填写月薪</string>
    <string name="brothers">兄弟姐妹数量</string>
    <string name="set_brothers">设置兄弟姐妹数量</string>
    <string name="hasWife">有无配偶</string>
    <string name="set_hasWife">选择：有/无</string>
    <string name="id_properties">户口性质</string>
    <string name="set_id_properties">选择：城市户口/农村户口</string>
    <string name="responsibility">交通责任</string>
    <string name="set_responsibility">选择您的交通责任</string>
    <string name="vehicle">交通工具</string>
    <string name="set_vehicle">选择您使用的交通工具</string>
    <string name="hospital_consume">医药费</string>
    <string name="set_hospital_consume">填写医药费/元</string>
    <string name="day_in_hospital">住院天数</string>
    <string name="set_day_in_hospital">填写住院天数/天</string>
    <string name="day_delay_work">误工天数</string>
    <string name="set_day_delay_work">填写误工天数/天</string>
    <string name="day_nutrition">营养期</string>
    <string name="set_day_nutrition">填写营养期/天</string>
    <string name="day_nursing">护理期</string>
    <string name="set_day_nursing">填写护理期/天</string>
    <string name="family_consume">你需要抚养的人</string>
    <string name="set_family_consume">点击设置需赡养人列表</string>


    <!--登录页面-->
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="hint_username">用户名：输入手机号码/邮箱</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱地址</string>
    <string name="password">密码</string>
    <string name="hint_password">密码：6位~14位英文或数字组合</string>
    <string name="repassword">重复密码</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="null_username_pwd">用户名或密码不能为空</string>
    <string name="error_username_pwd">用户名或密码错误</string>
    <string name="too_long_password">密码不能超过15位</string>
    <string name="too_short_password">密码不能少于6位</string>
    <string name="illegal_username">用户名格式不正确</string>

    <!--通用-->
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="refresh">刷新</string>
    <string name="loading">加载中。。。</string>
    <string name="finish">成功</string>
    <string name="fail">失败</string>
    <string name="choice">选择</string>


    <!--consult界面-->
    <string name="consult_btn_normal">按住说话</string>
    <string name="consult_btn_pressed">录音中。。</string>
    <string name="too_short_audio">按住时间太短~</string>
    <string name="empty_list">有什么疑问，都可以问我们的助理姐姐哦~~</string>


    <!--定位相关-->
    <string name="current_location">当前定位：</string>

    <!--设置-->
    <string name="settings">设置</string>
    <string name="about_us">关于我们</string>
    <string name="at_androidjp">有理赔app，designer吴骏鹏</string>

    <!--图标相关-->
    <string name="ic_close_app">&#xe63b;</string>
    <string name="ic_history">&#xe672;</string>
    <string name="ic_app_settings">&#xe612;</string>
    <string name="ask_speech">点击后说话</string>
    <string name="relative_should_care">添加需抚养人</string>
    <string name="parent">父母</string>
    <string name="input_age">输入岁数</string>
    <string name="last_page">上一页</string>
    <string name="label_pay_all">理赔总金额</string>
    <string name="yuan">元</string>
    <string name="modify_user_pic">修改用户头像</string>
    <string name="label_user_name">用户名</string>
    <string name="label_age">年龄</string>
    <string name="modify_password">修改密码</string>
    <string name="accident_location">事故位置:</string>
    <string name="accident_pay">事故总理赔金额：</string>
    <string name="history">历史记录</string>
    <string name="app_settings">应用设置</string>
    <string name="close_app">退出App</string>
    <string name="no_data">暂无数据~ 下拉刷新看看</string>
    <string name="your_salary">您的月薪</string>
    <string name="input_your_salary">输入您的月薪</string>
    <string name="confirm">确定</string>
    <string name="logout">注销用户</string>
    <string name="clear_dialogue">清空对话记录</string>
</resources>
