<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="12dp"
            android:text="请刷新定位"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_toLeftOf="@+id/btn_refresh_location"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />


        <!--app:cpb_iconComplete="@drawable/ic_action_accept"
            app:cpb_iconError="@drawable/ic_action_cancel"-->

        <com.dd.CircularProgressButton
            android:id="@+id/btn_refresh_location"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_margin="12dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            app:cpb_cornerRadius="12dp"
            app:cpb_textComplete="@string/finish"
            app:cpb_textError="@string/fail"
            app:cpb_textIdle="@string/refresh"
            app:cpb_selectorIdle="@drawable/selector_btn_idle"
            app:cpb_selectorComplete="@drawable/selector_btn_complete"
            app:cpb_selectorError="@drawable/selector_btn_error"
            />

        <com.dd.CircularProgressButton
            android:id="@+id/btn_choice_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="6dp"
            android:layout_below="@+id/tv_location"
            app:cpb_cornerRadius="12dp"
            app:cpb_textComplete="@string/finish"
            app:cpb_textError="@string/fail"
            app:cpb_textIdle="@string/choice"
            app:cpb_paddingProgress="10dp"
            app:cpb_selectorIdle="@drawable/selector_btn_idle"
            app:cpb_selectorComplete="@drawable/selector_btn_complete"
            app:cpb_selectorError="@drawable/selector_btn_error"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>