<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <include layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/id_login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="vertical"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="6dp"
                app:counterEnabled="false"
                app:counterMaxLength="16"
                >

                <com.androidjp.lib_custom_view.edittext.ClearEditText
                    android:id="@+id/cet_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress|phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="6dp"
                app:counterEnabled="true"
                app:counterMaxLength="14"
                >

                <com.androidjp.lib_custom_view.edittext.ClearEditText
                    android:id="@+id/cet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_password_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="6dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <com.androidjp.lib_custom_view.edittext.ClearEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/login_password_re"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="6dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <com.androidjp.lib_custom_view.edittext.ClearEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:hint="@string/email"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="6dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <com.androidjp.lib_custom_view.edittext.ClearEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="16sp"
                    android:hint="@string/phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="14sp"
                    android:layout_margin="6dp"
                    android:layout_centerVertical="true"
                    />
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal"
                    android:layout_toRightOf="@id/tv_sex"
                    android:layout_centerVertical="true"
                    >
                    <RadioButton
                        android:id="@+id/rbtn_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/rbtn_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        />
                </RadioGroup>

            </RelativeLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/login_log_in"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/bg_btn_orange"
                android:textColor="@color/white"
                android:text="@string/login_register" />


        </LinearLayout>


    </android.support.v7.widget.CardView>


</android.support.design.widget.CoordinatorLayout>